--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -7,6 +7,14 @@ steps:
       - docker#v3.3.0:
           image: 'rust:1.38-slim'
 
+  - label: ":rust: :clippy:"
+    commands:
+      - rustup component add clippy
+      - cargo clippy
+    plugins:
+      - docker#v3.3.0:
+          image: 'rust:1.38-slim'
+
   # Build and share a debug copy of the f1-ext-install command
   - label: ":rust: :hammer: Build"
     commands:
