--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -65,6 +65,9 @@ steps:
     plugins:
       - artifacts#v1.2.0:
           download: target/x86_64-unknown-linux-musl/debug/versions
-      - ecr#v2.0.0:
-          login: true
-          no_include_email: true
+      - seek-oss/aws-sm#v2.0.0:
+          env:
+            DOCKER_LOGIN_PASSWORD: buildkite/dockerhub
+      - docker-login#v2.0.1:
+          username: f1builder
+          password-env: DOCKER_LOGIN_PASSWORD
