--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,13 @@ maplit = "1.0.2"
 nom = "5.0.1"
 num_cpus = "1.10.1"
 quick-error = "1.2.2"
+regex = "1.3"
 serde = { version = "1.0", features = ["derive"] }
 structopt = "0.3.3"
 
 [dev-dependencies]
 bollard = "0.4.0-alpha.1"
+cool_asserts = "1.0"
 futures-util-preview = "0.3.0-alpha.19"
 indoc = "0.3"
 tar = "0.4"
