--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ num_cpus = "1.10.1"
 quick-error = "1.2.2"
 regex = "1.3"
 serde = { version = "1.0", features = ["derive"] }
+snafu = "0.6"
 structopt = "0.3.3"
 
 [dev-dependencies]
